Make contracts index

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -51,6 +51,7 @@
           <li role="presentation"><%= link_to "View All Loan Requests", loan_requests_path %></li>
           <li role="presentation"><%= link_to "View All Loan Offers", loan_offers_path %></li>
           <li role="presentation"><%= link_to "View All Users", users_path %></li>
+          <li role="presentation"><%= link_to "View All Contracts", contracts_path %></li>
 				</ul>
 			</nav>
 		</div>
