--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,8 +60,10 @@
 		<div class="col-md-3 user-menu">
 			<nav>
 				<ul class="nav nav-pills nav-stacked">
+					<li role="presentation"><%= link_to "All Users", users_path %></li>
 					<li role="presentation"><%= link_to "View #{@user.first_name}'s Loan Offers", user_loan_offers_path(@user.username) %></li>
 					<li role="presentation"><%= link_to "View #{@user.first_name}'s Loan Requests", user_loan_requests_path(@user.username) %></li>
+					<li role="presentation"><%= link_to "View #{@user.first_name}'s Contracts", user_contracts_path(@user.username) %></li>
 					<li role="presentation"><%= button_to "Deactivate #{@user.first_name}'s Account", user_path(@user.id), method: :delete, class:"deactivate" %></li>
 				</ul>
 			</nav>
