--- a/app/views/user_notifier/forgot_password.html.erb
+++ b/app/views/user_notifier/forgot_password.html.erb
@@ -1,1 +1,5 @@
-Click <%= link_to "here", reset_password_path(@user.id) %> to reset your password.
+Click the link below to reset your password.
+<br><br>
+<%= edit_password_reset_url(@user.password_reset_token) %>
+<br><br>
+If you did not request that your password be reset, ignore this email. Your password will not change.
