all tests passing

--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -28,7 +28,7 @@
               <td>
                 <div class="cart-header">
                   <div class="cart-item-info">
-                    Borrower: <%= lr.user.first_name + " "  + lr.user.last_name %><br>
+                    Lender: <%= lr.user.first_name + " "  + lr.user.last_name %><br>
                     Amount: <%= number_to_currency(lr.amount) %><br>
                     Term: <%= lr.term %> Months<br>
                     Rate: <%= lr.rate %>%<br><br>
