--- a/app/views/user_notifier/forgot_password.txt.erb
+++ b/app/views/user_notifier/forgot_password.txt.erb
@@ -1,5 +1,5 @@
-Click the link below to reset your password.
-<br><br>
+To reset your password, click the URL below.
+
 <%= edit_password_reset_url(@user.password_reset_token) %>
-<br><br>
-If you did not request that your password be reset, ignore this email. Your password will not change.
+
+If you did not request your password to be reset, just ignore this email and your password will continue to stay the same.
