minor styling and conditional for reset sad path

--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,3 +1,4 @@
+<div class='container'>
 <h3>Please enter your email below:</h3>
 <%= form_tag password_resets_path, method: :post do %>
 <div class="field">
@@ -6,3 +7,4 @@
 </div>
 <div class="actions"><%= submit_tag "Reset Password" %></div>
 <% end %>
+</div>
