--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Reset Password</h1>
+<div class="container">
+  <h1>Reset Password</h1>
 <%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -20,3 +21,4 @@
   </div>
   <div class="actions"><%= f.submit "Update Password" %></div>
 <% end %>
+</div>
